# Calculator

./: CMakeLists.txt
CLICalculatorC/: CMakeLists.txt  main.c
CLICalculatorCpp/: CMakeLists.txt  main.cpp
CalculatorC/: CMakeLists.txt  calculator.c  calculator.h  calculator_copy.c
CalculatorCpp/: CMakeLists.txt  Calculator.cpp  Calculator.h
CursesCalculatorC/: CMakeLists.txt  main.c
GtkCalculatorC/: CMakeLists.txt  layout.glade  main.c
QtCalculatorCpp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
